--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ POSTGRES_URL_NON_POOLING=
 MDB_URI=
 
 # LLMs
-OPENAI_API_KEY=sk-proj-yp7sfdN6b0YqbSpbzGjKT3BlbkFJA4vd9OhuOMtLdpbOx0O8
+OPENAI_API_KEY=
 OPENAI_API_HOST=
 OPENAI_API_ORG_ID=
 AZURE_OPENAI_API_ENDPOINT=
